--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </title>
   </head>
   <body>
-    <h1>Test successful -- change!</h1>
+    <h1>Test successful -- change again!</h1>
   </body>
 </html>
